<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="6"
        android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_weight="1"
        android:hint="Alarm Title"
        android:id="@+id/editor_alarm_title"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/choose_track"
            android:gravity="bottom|center_horizontal"
            android:id="@+id/music_alarm"></TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/add_music"
        android:id="@+id/add_track">
    </Button>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:weightSum="7"
    android:layout_weight="2"
    android:orientation="horizontal">

    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="MON"
        android:textSize="10dp"
        android:id="@+id/MON"
        >
        ></CheckBox>

    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="TUE"
        android:id="@+id/TUE"
        android:textSize="10dp">
        ></CheckBox>
    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="WED"
        android:id="@+id/WED"
        android:textSize="10dp">
        ></CheckBox>
    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="THU"
        android:id="@+id/THU"
        android:textSize="10dp">
        ></CheckBox>
    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="FRI"
        android:id="@+id/FRI"
        android:textSize="10dp">
        >
        ></CheckBox>
    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="SAT"
        android:id="@+id/SAT"
        android:textSize="10dp">
        >
        ></CheckBox>
    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="SUN"
        android:id="@+id/SUN"
        android:textSize="10dp">
        >
        ></CheckBox>
</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:text="@string/save"
        android:id="@+id/confirm_button_alarm"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>