<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkDarkGrey"
    tools:context=".main.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Clock"
        android:textColor="@color/LightGrey"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="30dp"
        android:textStyle="bold"
        android:background="@drawable/button_border"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="426dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:contentDescription="@null"
            android:id="@+id/circle"
            android:layout_width="fill_parent"
            android:layout_height="430dp"
            android:src="@drawable/circle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true"
            android:focusable="true"
            />

        <ImageView
        android:contentDescription="@null"
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/hour"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="false"/>

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="370dp"
        android:src="@drawable/minute"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="false"/>

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="380dp"
        android:src="@drawable/second"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="3"
        android:orientation="horizontal"
        android:background="@color/DarkDarkGrey">

    <Button
        android:id="@+id/button_Reminder"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:layout_height="match_parent"
        android:text="@string/Reminder"
        android:textColor="@color/LightGrey"
        android:background="@drawable/button_border"/>

        <Button
            android:id="@+id/button_Music"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:layout_height="match_parent"
            android:text="@string/Music"
            android:textColor="@color/LightGrey"
            android:background="@drawable/button_border"/>

    <Button
        android:id="@+id/button_Alarm"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:layout_height="match_parent"
        android:text="@string/Alarm"
        android:background="@drawable/button_border"
        android:textColor="@color/LightGrey"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
